--- a/login.html
+++ b/login.html
@@ -2,23 +2,25 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Home</title>
+	<title>Login</title>
 	<!-- Link Bootstrap -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<!-- Link Custom CSS -->
 	<link rel="stylesheet" type="text/css" href="Assets/CSS/style.css">
+
+	
 </head>
-<body>
-	<video autoplay muted loop id="backgroundVideo">
-	  <source src="Assets/Video/Handyman-Construction.mp4" type="video/mp4">
-	</video>
-	<div class="content">
-		<div class="container">
-			<div class="jumbotron text-center">
-				<h1>Volunteer Search</h1>
-				<h3>A simple way to find local volunteer events</h3>
-				<input type="text" id="landing-inp" placeholder="Type to Search">
-				<button class="fun-button landing-button">Search</button>
+<body id="login-body">
+
+	<div class="form-container">
+		<div class="login slide-up">
+			<div class="center">
+				<h2 class="form-title" id="login"></h2>
+				<div class="form-holder">
+					<input type="email" class="input" placeholder="Email" />
+					<input type="password" class="input" placeholder="Password" />
+				</div>
+				<button class="submit-btn">Log in</button>
 			</div>
 		</div>
 	</div>
