--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 	<!-- Link Bootstrap -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<!-- Link Custom CSS -->
-	<link rel="stylesheet" type="text/css" href="Assets/CSS/style.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
 	<video autoplay muted loop id="backgroundVideo">
-	  <source src="Assets/Video/Handyman-Construction.mp4" type="video/mp4">
+	  <source src="assets/video/Handyman-Construction.mp4" type="video/mp4">
 	</video>
 	<div class="content">
 		<div class="container">
@@ -18,7 +18,7 @@
 				<h1>Volunteer Search</h1>
 				<h3>A simple way to find local volunteer events</h3>
 				<input type="text" id="landing-inp" placeholder="Type to Search">
-				<button class="fun-button landing-button">Search</button>
+				<button class="fun-button landing-button" id="searchBtn">Search</button>
 			</div>
 		</div>
 	</div>
@@ -31,5 +31,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 <!-- Link Custom Javascript -->
+<script src="assets/logic/app.js"></script>
 </body>
 </html>
