--- a/index.html
+++ b/index.html
@@ -5,23 +5,58 @@
 	<title>Home</title>
 	<!-- Link Bootstrap -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<!-- FontAwesome -->
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 	<!-- Link Custom CSS -->
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
+	<!-- background video -->
 	<video autoplay muted loop id="backgroundVideo">
-	  <source src="assets/videos/handyman-Construction.mp4" type="video/mp4">
+	  <source src="assets/videos/Quarter-Ferris.mp4" type="video/mp4">
 	</video>
-	<div class="content">
-		<div class="container">
+	<!-- end background video -->
+
+	<!-- navbar -->
+	<nav id="user-profile-nav" class="navbar navbar-expand-md">
+	    <div class="navbar-collapse collapse w-100 order-0 order-md-0 dual-collapse2">
+	        <a class="navbar-brand" href="login.html"><i class="fas fa-user"></i> Sign In</a>
+	        <a class="user-id nav-link" href="userPage.html"></a>
+	        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
+	            <span class="navbar-toggler-icon"></span>
+	        </button>
+	    </div>
+	    <div class="navbar-collapse collapse w-100 order-0 dual-collapse2">
+	        <ul class="navbar-nav ml-auto">
+	            <li class="nav-item">
+	                <a class="nav-link" href="#"><i class="fas fa-search"></i> Search</a>
+	            </li>
+	            <li class="nav-item">
+	                <a class="nav-link" href="#"><i class="fas fa-plus"></i> Create Event</a>
+	            </li>
+	        </ul>
+	    </div>
+	</nav>
+	<!-- end navbar -->
+
+	<!-- main content -->
+	<div class="content row">
+		<div id="search-jumbo" class="container">
 			<div class="jumbotron text-center">
-				<h1>Volunteer Search</h1>
-				<h3>A simple way to find local volunteer events</h3>
-				<input type="text" id="landing-inp" placeholder="Type to Search">
-				<button class="fun-button landing-button" id="searchBtn">Search</button>
+				<h1>CorkBoard</h1>
+				<h3>Search your neighborhood for events</h3>
+				<div class="search-form">
+					<input type="text" id="landing-inp" placeholder="Type to Search">
+					<input type="text" id="zipcode" placeholder="zipcode">
+					<button class="fun-button landing-button" id="searchBtn">Search</button>
+				</div>
 			</div>
 		</div>
 	</div>
+	<!-- end main content -->
+
+<!-- Link Firebase -->
+<script src="https://www.gstatic.com/firebasejs/5.8.6/firebase.js"></script>
 <!-- Link JQuery -->
 <script
   src="https://code.jquery.com/jquery-3.3.1.min.js"
@@ -30,6 +65,8 @@
 <!-- Link Popper.js and Bootstrap JS -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<!-- Moment.js -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.js"></script>
 <!-- Link Custom Javascript -->
 <script src="assets/logic/app.js"></script>
 </body>
