--- a/login.html
+++ b/login.html
@@ -7,23 +7,25 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<!-- Link Custom CSS -->
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-
-	
 </head>
 <body id="login-body">
 
 	<div class="form-container">
 		<div class="login slide-up">
 			<div class="center">
+				<div class="alert-div text-center"></div>
 				<h2 class="form-title" id="login"></h2>
 				<div class="form-holder">
-					<input type="email" class="input" placeholder="Email" />
-					<input type="password" class="input" placeholder="Password" />
+					<input id="username" type="text" class="input" placeholder="Username" />
+					<input id="password" type="password" class="input" placeholder="Password" />
 				</div>
-				<button class="submit-btn">Log in</button>
+				<button id="log-in-button" class="submit-btn">Log In</button>
+				<button id="sign-up-button" class="submit-btn">Sign Up</button>
 			</div>
 		</div>
 	</div>
+<!-- Link Firebase -->
+<script src="https://www.gstatic.com/firebasejs/5.8.6/firebase.js"></script>
 <!-- Link JQuery -->
 <script
   src="https://code.jquery.com/jquery-3.3.1.min.js"
@@ -32,6 +34,9 @@
 <!-- Link Popper.js and Bootstrap JS -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<!-- Moment.js -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.js"></script>
 <!-- Link Custom Javascript -->
+<script src="assets/logic/app.js"></script>
 </body>
 </html>
