Logic for near me

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 					<input type="text" id="landing-inp" placeholder="Type to Search">
 					<input type="text" id="zipcode" placeholder="zipcode">
 					<button class="fun-button landing-button" id="searchBtn">Search</button>
+					<button class="fun-button landing-button" id="near-me-btn">Near Me</button>
 				</div>
 			</div>
 		</div>
