current working branch for ryan

--- a/userPage.html
+++ b/userPage.html
@@ -24,13 +24,13 @@
 	                <a class="nav-link" href="index.html"><i class="fas fa-search"></i> Search</a>
 	            </li>
 	            <li class="nav-item">
-	                <a class="nav-link" href="#"><i class="fas fa-plus"></i> Create Event</a>
+	                <a class="nav-link" href="createEvent.html"><i class="fas fa-plus"></i> Create Event</a>
 	            </li>
 	        </ul>
 	    </div>
 	</nav>
 	<div class="container event-content mt-5">
-		<h1 class="text-center">Your Saved Events</h1>
+		<h1 class="text-center text-light">Your Saved Events</h1>
 	</div>	
 <!-- Link Firebase -->
 <script src="https://www.gstatic.com/firebasejs/5.8.6/firebase.js"></script>
