--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	    <div class="navbar-collapse collapse w-100 order-0 dual-collapse2">
 	        <ul class="navbar-nav ml-auto">
 	            <li class="nav-item">
-	                <a class="nav-link" href="#"><i class="fas fa-search"></i> Search</a>
+	                <a class="nav-link" href="index.html"><i class="fas fa-search"></i> Search</a>
 	            </li>
 	            <li class="nav-item">
 	                <a class="nav-link" href="#"><i class="fas fa-plus"></i> Create Event</a>
