--- a/createEvent.html
+++ b/createEvent.html
@@ -8,6 +8,8 @@
       <script src="https://www.gstatic.com/firebasejs/5.8.6/firebase.js"></script>
       <!-- Link JQuery -->
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+      <!-- Link Google Fonts -->
+      <link href="https://fonts.googleapis.com/css?family=Bungee+Shade|Fredericka+the+Great|Roboto:400,500" rel="stylesheet">
       <!-- Link Custom CSS -->
       <link rel="stylesheet" type="text/css" href="assets/css/style.css">
       
