--- a/login.html
+++ b/login.html
@@ -7,6 +7,8 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<!-- FontAwesome -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+	<!-- Link Google Fonts -->
+	<link href="https://fonts.googleapis.com/css?family=Bungee+Shade|Fredericka+the+Great|Roboto:400,500" rel="stylesheet">
 	<!-- Link Custom CSS -->
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
